app_controllers/infrastructure/kubernetes-deployments/services/splunk/02_service-docker-desktop-splunk-charles.yml

apiVersion: v1
kind: Service
metadata:
  name: splunk-charles
  annotations:
    external-dns.alpha.kubernetes.io/hostname: splunk-charles.docker-desktop.securethebox.us
spec:
  selector:
    app: splunk-charles
  ports:
  - name: http
    targetPort: 8000
    port: 8000
  - name: management
    targetPort: 8089
    port: 8089
  - name: forwarder
    targetPort: 9997
    port: 9997
