app_controllers/infrastructure/kubernetes-deployments/services/splunk/03_ingress-docker-desktop-splunk-charles.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: splunk-charles
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/preserve-host: "true"
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
spec:
  rules:
  - host: splunk-charles.docker-desktop.securethebox.us
    http:
      paths:
      - path: /
        backend:
          serviceName: splunk-charles
          servicePort: http
  - host: splunk-charles-management.docker-desktop.securethebox.us
    http:
      paths:
      - path: /
        backend:
          serviceName: splunk-charles
          servicePort: management
